# forge-narrator

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
docs/: TTS_Spec_0_Overview.md  TTS_Spec_B_AudioGenerator.md  TTS_Spec_C_WebInterface.md  web_interface_mockup.html
poc/: align_mlx.py  elevenlabs_probe.py  player.html  polly_probe.py  sample.marks.mlx.json  sample_text.txt  ssml_verify.py
src/forge_narrator/: __init__.py  __main__.py  align.py  blocks_json.py  cache.py  chunk.py  cli.py  cost.py  ffmpeg.py  hashing.py  manifest.py  marks.py  pipeline.py  ssml.py  stitch.py  synth.py  upload.py
src/forge_narrator/web/: __init__.py  server.py
src/forge_narrator/web/static/: index.html
tests/: conftest.py  test_align_blocks.py  test_blocks_json.py  test_chunk.py  test_cost_cache.py  test_hashing.py  test_manifest.py  test_marks.py  test_ssml.py  test_stitch.py  test_upload.py  test_web.py
tests/fixtures/: build_fixture.py  manifest.json
