[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-narrator"
version = "0.1.0"
description = "Turn a NotebookForge SSML manifest into narrated audio with word-level timing."
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
]

[project.optional-dependencies]
# The aligner only installs cleanly on Apple Silicon / Python 3.11. Kept optional
# so `estimate` and the manifest reader can be used/tested without it.
align = [
    "whispermlx",
]
dev = [
    "pytest>=8",
]

[project.scripts]
forge-narrator = "forge_narrator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
