[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-narrator"
version = "0.1.0"
description = "Turn a NotebookForge SSML manifest into narrated audio with word-level timing."
requires-python = ">=3.11"
# No runtime Python deps: ElevenLabs is called over HTTP with the stdlib (urllib).
# ffmpeg + ffprobe are hard dependencies but installed via Homebrew, not pip.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
forge-narrator = "forge_narrator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
