[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-narrator"
version = "0.1.0"
description = "Turn a NotebookForge SSML manifest into narrated audio with word-level timing."
requires-python = ">=3.11"
# No runtime Python deps: ElevenLabs is called over HTTP with the stdlib (urllib).
# ffmpeg + ffprobe are hard dependencies but installed via Homebrew, not pip.
dependencies = []

[project.optional-dependencies]
# The local web console (`forge-narrator serve`). Core estimate/generate need none
# of these. SSE async + built-in HTTP Range via FileResponse (Spec C §10).
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=8",
    "httpx>=0.27",   # FastAPI TestClient (web tests)
]

[project.scripts]
forge-narrator = "forge_narrator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"forge_narrator.web" = ["static/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
